--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "k300",
-  "version": "1.0.54",
+  "version": "1.0.63",
   "description": "react theme k300",
   "main": "build/index.js",
   "scripts": {
@@ -33,6 +33,9 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "style-loader": "^0.23.1",
     "webpack-cli": "^3.3.0"
   }
 }
